// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon element produces button output with properties supplied 1`] = `
<button
  aria-label="Star it"
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1stao2l-MuiButtonBase-root-MuiIconButton-root"
  disabled={false}
  id="app.page1.save"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  title="Star it"
  type="button"
>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
  >
    star
  </span>
</button>
`;

exports[`Icon element produces empty  output with display false 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1t0xgfa-MuiButtonBase-root-MuiIconButton-root"
  disabled={false}
  id="app.page1.save"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
  >
    star
  </span>
</button>
`;

exports[`Icon element produces empty output with display false 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1t0xgfa-MuiButtonBase-root-MuiIconButton-root"
  disabled={false}
  id="app.page1.save"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
  >
    star
  </span>
  <span
    className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`Icon element produces icon output with properties supplied 1`] = `
<span
  aria-hidden={true}
  aria-label="Star it"
  className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-oo23qg-MuiIcon-root"
  id="app.page1.save"
  title="Star it"
>
  star
</span>
`;

exports[`Icon element produces output with default values where properties omitted 1`] = `
<span
  aria-hidden={true}
  className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
  id="app.page1.save"
>
  star
</span>
`;

exports[`Icon element produces output with properties supplied as state values 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-q6c508-MuiButtonBase-root-MuiIconButton-root"
  disabled={false}
  id="app.page1.save"
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    aria-hidden={true}
    className="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
  >
    star
  </span>
</button>
`;
